metadata/force-app/main/default/objects/CustomName_glNFI__c/CustomName_glNFI__c.object-meta.xml
<CustomObject>
    <description>Description_qcalU</description>
    <label>CustomLabel_qtLYD</label>
    <nameField>
        <label>CustomLabel_qtLYD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_qtLYDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>