metadata/force-app/main/default/objects/CustomName_glNFI__c/fields/CustomField_Oqzto__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Oqzto__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldMtmbN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>