metadata/force-app/main/default/objects/CustomName_glNFI__c/fields/CustomField_VNVqu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_VNVqu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRAkOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>